--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
             <ul>
                 <li><a href="index.php" id="home"><img src="assets/Home.png" alt=""><br> Home</a></li>
                 <li><a href="help.php"><img src="assets/Info Circle.png" alt=""><br> Bantuan</a></li>
-                <li><a href="#"><img src="assets/Profile.png" alt="" id="small"><br> Profil</a></li>
+                <li><a href="profile.php"><img src="assets/Profile.png" alt="" id="small"><br> Profil</a></li>
             </ul>
         </nav>
     </header>
